--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,6 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-bootstrap-sidebar-menu": "^2.0.3",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -29,6 +27,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-social-login-buttons": "^3.9.1",
+    "react-table": "^7.8.0",
     "recharts": "^2.12.1",
     "web-vitals": "^2.1.4"
   },
